# cppcourse-brunel

./: CMakeLists.txt  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  NeuronTest.cpp  Neuron_unittest.cpp  README.md  ReadMe.txt  pythonScript.py
